--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
   compileSdkVersion 27
   defaultConfig {
     applicationId "com.pager.pagerchallenge"
-    minSdkVersion 15
+    minSdkVersion 19
     targetSdkVersion 27
     versionCode 1
     versionName "1.0"
@@ -28,6 +28,7 @@ dependencies {
   implementation 'com.android.support.constraint:constraint-layout:1.1.2'
   testImplementation 'junit:junit:4.12'
 
+  compile 'com.google.code.gson:gson:2.8.2'
   implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
   implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
   implementation 'com.squareup.retrofit2:retrofit:2.4.0'
@@ -37,4 +38,27 @@ dependencies {
   implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 
   testImplementation "org.mockito:mockito-core:2.19.0"
+
+  //ButterKnife
+  compile 'com.jakewharton:butterknife:8.8.1'
+  annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+
+
+  // Room (use 1.1.0-alpha1 for latest alpha)
+  implementation 'android.arch.persistence.room:runtime:1.1.0'
+  annotationProcessor "android.arch.persistence.room:compiler:1.1.0"
+  // alternatively, just LiveData
+  implementation 'android.arch.lifecycle:livedata:1.1.1'
+  annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+
+  // alternatively, just ViewModel
+  implementation 'android.arch.lifecycle:viewmodel:1.1.1'
+
+  //Recycler and card view
+  implementation 'com.android.support:recyclerview-v7:27.1.1'
+  implementation 'com.android.support:cardview-v7:27.1.1'
+
+
+
 }
