--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,20 +40,20 @@ dependencies {
   testImplementation "org.mockito:mockito-core:2.19.0"
 
   //ButterKnife
-  compile 'com.jakewharton:butterknife:8.8.1'
+  implementation 'com.jakewharton:butterknife:8.8.1'
   annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
 
 
   // Room (use 1.1.0-alpha1 for latest alpha)
-  implementation 'android.arch.persistence.room:runtime:1.1.0'
+  api 'android.arch.persistence.room:runtime:1.1.0'
   annotationProcessor "android.arch.persistence.room:compiler:1.1.0"
-  // alternatively, just LiveData
-  implementation 'android.arch.lifecycle:livedata:1.1.1'
+
+  api 'android.arch.lifecycle:extensions:1.1.1'
+  api 'android.arch.lifecycle:viewmodel:1.1.1'
+  api 'android.arch.lifecycle:livedata:1.1.1'
   annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 
-  // alternatively, just ViewModel
-  implementation 'android.arch.lifecycle:viewmodel:1.1.1'
 
   //Recycler and card view
   implementation 'com.android.support:recyclerview-v7:27.1.1'
